--- a/templates/temp-laptop.html
+++ b/templates/temp-laptop.html
@@ -216,6 +216,14 @@
             font-size: 2rem;
             margin-left: 1rem;
         }
+        .footer{
+            margin: 20px;
+            color: white;
+            float: right;
+        }
+        #heart{
+            color: red;
+        }
     </style>
 </head>
 
@@ -243,6 +251,9 @@
                     target="_blank">https://www.techradar.com/news/mobile-computing/laptops/best-laptops-1304361</a></p>
             <a href="#" class="laptop__link">Buy now for ${%PRICE%} <span class="emoji-right">🥳 😍</span></a>
         </figure>
+    </div>
+    <div class = "footer">
+        Made with <span id = "heart">❤</span> by Deeksha Sharma
     </div>
 </body>
 
