--- a/templates/temp-overview.html
+++ b/templates/temp-overview.html
@@ -168,6 +168,14 @@
             font-size: 2rem;
             margin-left: 1rem;
         }
+        .footer{
+            margin: 20px;
+            color: white;
+            float: right;
+        }
+        #heart{
+            color: red;
+        }
     </style>
 </head>
 
@@ -177,6 +185,9 @@
         <div class="cards-container">
             {%CARDS%}
         </div>
+    </div>
+    <div class = "footer">
+        Made with <span id = "heart">❤</span> by Deeksha Sharma
     </div>
 </body>
 
